index - header - basics  - 1

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -1,1 +1,48 @@
 <!--Home page-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ReadHub</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+</head>
+
+<body>
+
+    <header> 
+        <a href="index.html">
+            <img id="logo" src="photos_index/logo.png" width="65px" title="Back to home">
+        </a>
+
+        <h1 id="name" title="ReadHub">&nbsp;ReadHub</h1>
+
+       
+        <input type="text" placeholder="Search here" id="input_box" name="search">
+
+
+
+        <div class="dropdown">
+            <button class="dropdown_button" type="button"><b>Categories</b></button>
+            <div class="dropdown-content">
+                <a href="categ1.html"><b>Bulgarian books</b></a>
+                <a href="categ2.html"><b>Foreign books</b></a>
+                <a href="categ3.html"><b>Bestselers</b></a>
+            </div>
+        </div>
+
+        <a href="profile.html">
+            <button class="profile"><b>Pro</b></button>
+        </a>
+
+    </header>
+
+   
+    <footer>
+ 
+    </footer>
+</body>
+
+</html>
