--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -8,6 +8,7 @@
     <title>ReadHub</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
         </div>
 
         <a href="profile.html">
-            <button class="profile"><b>Pro</b></button>
+            <button class="profile"><i class="fa-solid fa-user"></i></button>
         </a>
 
     </header>
