--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -18,33 +18,33 @@
             </div>        
         </div>
 
-        <div class="conteiner">
+        <div class="conteiner2">
             <div class="bookpage">
-                <img class="snimka" src="kniga1.jpg">
+                <img class="snimka2" src="kniga3.jpg">
             </div>
-            <div class="text">
-                <h3 id="zaglavie">360 градуса преди края</h3>
-                <p id="avtor">Автор: Николай Телпалов</p>
+            <div class="text1">
+                <h3 id="zaglavie2">Аз и морето</h3>
+                <p id="avtor">Автор: Петя Добарова</p>
             </div>        
         </div>
 
-        <div class="conteiner">
+        <div class="conteiner3">
             <div class="bookpage">
-                <img class="snimka" src="kniga1.jpg">
+                <img class="snimka3" src="kniga2.jpg" width="20%" height="10%">
             </div>
-            <div class="text">
-                <h3 id="zaglavie">360 градуса преди края</h3>
-                <p id="avtor">Автор: Николай Телпалов</p>
+            <div class="text2">
+                <h3 id="zaglavie3">Аварията</h3>
+                <p id="avtor">Автор: Тихомир Димитров</p>
             </div>       
         </div>
 
-        <div class="conteiner">
+        <div class="conteiner4">
             <div class="bookpage">
-                <img class="snimka" src="kniga1.jpg">
+                <img class="snimka4" src="kniga4.jpg">
             </div>
-            <div class="text">
-                <h3 id="zaglavie">360 градуса преди края</h3>
-                <p id="avtor">Автор: Николай Телпалов</p>
+            <div class="text3">
+                <h3 id="zaglavie4">Алхимия на една монета</h3>
+                <p id="avtor">Автор: Владимир Колев</p>
             </div>      
         </div>
 
