--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -21,7 +21,7 @@
         <h1 id="name" title="ReadHub">&nbsp;ReadHub</h1>
 
        
-        <input type="text" placeholder="Search here" id="input_box" name="search"><i class="fa-solid fa-magnifying-glass" id="search_icon"></i>
+        <input type="text" placeholder="Search here" id="input_box" name="search"><div id="search_icon"><a><i class="fa-solid fa-magnifying-glass" ></i></a></div>
 
 
 
