broken carousel + font

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -40,6 +40,30 @@
 
     </header>
 
+    <div class="carousel" id="carousel-container">
+        <div class="slide" id="s1">
+            <a href="book1.html" class="car_link"><img class="car_picture"title="book1" src="kniga1.jpg"></a>
+            <div id="bookinfo">
+                <h1>Ze Book</h1>
+                <p>Bl abla bba kb a kba k bak bakb ak ba kbakbakbak b</p>
+            </div>
+        </div>
+
+        <div class="slide" id="s2">
+            <a href="book1.html" class="car_link"><img class="car_picture" title="book1 (again)" src="kniga1.jpg"></a>
+            <div id="bookinfo">
+                
+            </div>
+        </div>
+
+        <div class="slide" id="s3">
+            <a href="book1.html" class="car_link"><img class="car_picture"title="book 1.5" src="kniga1.jpg"></a>
+            <div id="bookinfo">
+                
+            </div>
+        </div>
+    </div>
+
    
     <footer>
         <h1 id="name" title="ReadHub">ReadHub</h1>
