--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -1,8 +1,37 @@
 <!DOCTYPE html>
 <html lang="bg">
+
 <head>
+    <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <header>
+        <a href="index.html">
+            <img id="logo" src="photos_index/logo.png" width="65px" title="Back to home">
+        </a>
+
+        <h1 id="name" title="ReadHub">&nbsp;ReadHub</h1>
+
+       
+        <input type="text" placeholder="Search here" id="input_box" name="search"><div id="search_icon"><a><i class="fa-solid fa-magnifying-glass" ></i></a></div>
+
+
+
+        <div class="dropdown">
+            <button class="dropdown_button" type="button"><b>Categories</b></button>
+            <div class="dropdown-content">
+                <a href="categ1.html"><b>Bulgarian books</b></a>
+                <a href="categ2.html"><b>Foreign books</b></a>
+                <a href="categ3.html"><b>Bestselers</b></a>
+            </div>
+        </div>
+
+        <a href="profile.html">
+            <button class="profile"><i class="fa-solid fa-user"></i></button>
+        </a>
+
+    </header>
 
 
     <h1 class="bel">Българска литература</h1>
