--- a/Preparation_2/categ2.html
+++ b/Preparation_2/categ2.html
@@ -13,27 +13,27 @@
                 <img class="snimka" src="kniga1-1.jpg">
             </div>
             <div class="text">
-                <h3 id="zaglavie">360 градуса преди края</h3>
-                <p id="avtor">Автор: Николай Телпалов</p>
+                <h3 id="zaglavie">Onyx Storm</h3>
+                <p id="avtor">Автор: Rebbeca Yarros</p>
             </div>        
         </div>
 
         <div class="conteiner2">
             <div class="bookpage">
-                <img class="snimka2" src="kniga3.jpg">
+                <img class="snimka2" src="kniga2-2.jpg">
             </div>
             <div class="text1">
-                <h3 id="zaglavie2">Аз и морето</h3>
-                <p id="avtor">Автор: Петя Добарова</p>
+                <h3 id="zaglavie2">White Nights</h3>
+                <p id="avtor">Автор: Fyodor Dostoyevsky</p>
             </div>        
         </div>
 
         <div class="conteiner3">
             <div class="bookpage">
-                <img class="snimka3" src="kniga2.jpg" width="20%" height="10%">
+                <img class="snimka3" src="kniga3-3.jpg" width="20%" height="10%">
             </div>
             <div class="text2">
-                <h3 id="zaglavie3">Аварията</h3>
+                <h3 id="zaglavie3">Berserk Deluxe</h3>
                 <p id="avtor">Автор: Тихомир Димитров</p>
             </div>       
         </div>
