--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -2,6 +2,10 @@
 <html lang="bg">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bulgarian books</title>
+    <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
