categ-2-and-photos

--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -43,7 +43,7 @@
     <section class="category">
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka" src="kniga1.jpg">
+                <img class="snimka" src="photos-categ1/kniga1.jpg">
             </div>
             <div class="text">
                 <h3 id="zaglavie">360 градуса преди края</h3>
@@ -53,7 +53,7 @@
 
         <div class="conteiner2">
             <div class="bookpage">
-                <img class="snimka2" src="kniga3.jpg">
+                <img class="snimka2" src="photos-categ1/kniga3.jpg">
             </div>
             <div class="text1">
                 <h3 id="zaglavie2">Аз и морето</h3>
@@ -63,7 +63,7 @@
 
         <div class="conteiner3">
             <div class="bookpage">
-                <img class="snimka3" src="kniga2.jpg" width="20%" height="10%">
+                <img class="snimka3" src="photos-categ1/kniga2.jpg" width="20%" height="10%">
             </div>
             <div class="text2">
                 <h3 id="zaglavie3">Аварията</h3>
@@ -73,7 +73,7 @@
 
         <div class="conteiner4">
             <div class="bookpage">
-                <img class="snimka4" src="kniga4.jpg">
+                <img class="snimka4" src="photos-categ1/kniga4.jpg">
             </div>
             <div class="text3">
                 <h3 id="zaglavie4">Алхимия на една монета</h3>
