--- a/Preparation_2/categ2.html
+++ b/Preparation_2/categ2.html
@@ -42,7 +42,7 @@
     <section class="category">
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka" src="kniga1-1.jpg">
+                <img class="snimka" src="photos-categ2/kniga1-1.jpg">
             </div>
             <div class="text">
                 <h3 id="zaglavie">Onyx Storm</h3>
@@ -52,7 +52,7 @@
 
         <div class="conteiner2">
             <div class="bookpage">
-                <img class="snimka2" src="kniga2-2.jpg">
+                <img class="snimka2" src="photos-categ2/kniga2-2.jpg">
             </div>
             <div class="text1">
                 <h3 id="zaglavie2">White Nights</h3>
@@ -62,21 +62,21 @@
 
         <div class="conteiner3">
             <div class="bookpage">
-                <img class="snimka3" src="kniga3-3.jpg" width="20%" height="10%">
+                <img class="snimka3" src="photos-categ2/kniga3-3.jpg" width="20%" height="10%">
             </div>
             <div class="text2">
                 <h3 id="zaglavie3">Berserk Deluxe</h3>
-                <p id="avtor">Автор: Тихомир Димитров</p>
+                <p id="avtor">Автор: Kentaro Miura</p>
             </div>       
         </div>
 
         <div class="conteiner4">
             <div class="bookpage">
-                <img class="snimka4" src="kniga4.jpg">
+                <img class="snimka4" src="photos-categ2/kniga4-4.jpg">
             </div>
             <div class="text3">
-                <h3 id="zaglavie4">Алхимия на една монета</h3>
-                <p id="avtor">Автор: Владимир Колев</p>
+                <h3 id="zaglavie4">Normal People</h3>
+                <p id="avtor">Автор: Sally Ronney</p>
             </div>      
         </div>
 
