fixed pictures in carousel

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -44,7 +44,7 @@
         <div class="carousel">
             <div class="slide" id="s1">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="book1" src="kniga1.jpg">
+                    <img class="car_picture" title="book1" src="photos-categ1/kniga1.jpg">
                 </a>
                 <div class="bookinfo">
                     <h1>360° ПРЕДИ КРАЯ</h1>
@@ -54,7 +54,7 @@
     
             <div class="slide" id="s2">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="book1 (again)" src="kniga1.jpg">
+                    <img class="car_picture" title="book1 (again)" src="photos-categ1/kniga2.jpg">
                 </a>
                 <div class="bookinfo">
                     <h1>Book 2</h1>
@@ -64,7 +64,7 @@
     
             <div class="slide" id="s3">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="book 1.5" src="kniga1.jpg">
+                    <img class="car_picture" title="book 1.5" src="photos-categ1/kniga3.jpg">
                 </a>
                 <div class="bookinfo">
                     <h1>Book 1.5</h1>
