--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -42,7 +42,7 @@
 
     <div class="carousel" id="carousel-container">
         <div class="slide" id="s1">
-            <a href="book1.html" class="car_link">
+            <a href="photos-categ1/kniga1.jpg" class="car_link">
                 <img class="car_picture" title="book1" src="kniga1.jpg">
             </a>
             <div class="bookinfo">
