categ1-kniga1-promqna

--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -46,8 +46,8 @@
                 <img class="snimka" src="photos-categ1/kniga1.jpg" >
             </div>
             <div class="text">
-                <h3 id="zaglavie">За радостта и езика</h3>
-                <p id="avtor">Автор: Иван Теофилов</p>
+                <h3 id="zaglavie">360 градуса преди края</h3>
+                <p id="avtor">Автор: Силва Дончева</p>
             </div>        
         </div>
 
