added carousel buttons

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -41,6 +41,10 @@
     </header>
     <div class="carousel-container">
         <div class="carousel">
+
+            <button class="car_button" id="prev" onclick="nextslide(-1)">&#10094;</button>
+            <button class="car_button" id="next" onclick="nextslide(1)">&#10095;</button>
+
             <div class="slide" id="s1">
                 <a href="book1.html" class="car_link">
                     <img class="car_picture" title="book1" src="photos-categ1/kniga1.jpg">
