Navigation Buttons Successfully added!!

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -45,6 +45,8 @@
             <button class="car_button" id="prev" onclick="nextslide(-1)">&#10094;</button>
             <button class="car_button" id="next" onclick="nextslide(1)">&#10095;</button>
 
+
+
             <div class="slide" id="s1">
                 <a href="book1.html" class="car_link">
                     <img class="car_picture" title="book1" src="photos-categ1/kniga1.jpg">
@@ -73,6 +75,12 @@
                     <h1>Book 1.5</h1>
                     <p>Another book description.</p>
                 </div>
+            </div>
+
+            <div class="box-navbutt">
+                <button class="navbutt" onclick="ButtSlide(0)">&nbsp</button>
+                <button class="navbutt" onclick="ButtSlide(1)">&nbsp</button>
+                <button class="navbutt" onclick="ButtSlide(2)">&nbsp</button>
             </div>
         </div>
     </div>
