--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -39,7 +39,12 @@
         </a>
 
     </header>
+
+    <div class="home_page">
+
     <div class="carousel-container">
+
+    
         <div class="carousel">
 
             <button class="car_button" id="prev" onclick="nextslide(-1)">&#10094;</button>
@@ -85,6 +90,11 @@
         </div>
     </div>
 
+<div class="TOP-books">
+<h2><b>Най-добрите ни предложения за тази седмица:</b></h2>
+
+</div>
+</div>
    
     <footer>
         <h1 id="name" title="ReadHub">ReadHub</h1>
