Categ 2 images fixed + Recommended books framework started

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -85,6 +85,54 @@
         </div>
     </div>
 
+    <hr>
+    <h1>Recommended for you:</h1>
+
+    <section class="category">
+        <div class="conteiner">
+            <div class="bookpage">
+                <img class="snimka" src="photos-categ1/kniga1.jpg" >
+            </div>
+            <div class="text">
+                <h3 id="zaglavie">360 градуса преди края</h3>
+                <p id="avtor">Автор: Силва Дончева</p>
+            </div>        
+        </div>
+
+        <div class="conteiner">
+            <div class="bookpage">
+                <img class="snimka" src="photos-categ2/kniga2-2.jpg">
+            </div>
+            <div class="text">
+                <h3 id="zaglavie">White Nights</h3>
+                <p id="avtor">Автор: Fyodor Dostoyevsky</p>
+            </div>        
+        </div>
+
+        <div class="conteiner">
+            <div class="bookpage">
+                <img class="snimka" src="photos-categ2/kniga3-3.jpg" width="20%" height="10%">
+            </div>
+            <div class="text">
+                <h3 id="zaglavie">Berserk Deluxe</h3>
+                <p id="avtor">Автор: Kentaro Miura</p>
+            </div>       
+        </div>
+
+        <div class="conteiner">
+            <div class="bookpage">
+                <img class="snimka" src="photos-categ2/kniga4-4.jpg">
+            </div>
+            <div class="text">
+                <h3 id="zaglavie">Normal People</h3>
+                <p id="avtor">Автор: Sally Ronney</p>
+            </div>      
+        </div>
+
+    </section>
+
+
+
    
     <footer>
         <h1 id="name" title="ReadHub">ReadHub</h1>
