--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -95,64 +95,67 @@
             </div>
         </div>
 
-<div class="TOP-books">
-<h2><b>Най-добрите ни предложения за тази седмица:</b></h2>
-<section class="category">
-    <div class="conteiner">
-        <div class="bookpage">
-            <img class="snimka" src="photos-categ1/kniga1.jpg">
-        </div>
-        <div class="text">
-            <h3 id="zaglavie">360 градуса преди края</h3>
-            <p id="avtor">Автор: Силва Дончева</p>
-        </div>
-    </div>
-
-    <div class="conteiner">
-        <div class="bookpage">
-            <img class="snimka" src="photos-categ2/kniga2-2.jpg">
-        </div>
-        <div class="text">
-            <h3 id="zaglavie">White Nights</h3>
-            <p id="avtor">Автор: Fyodor Dostoyevsky</p>
-        </div>
-    </div>
-
-    <div class="conteiner">
-        <div class="bookpage">
-            <img class="snimka" src="photos-categ2/kniga3-3.jpg">
-        </div>
-        <div class="text">
-            <h3 id="zaglavie">Berserk Deluxe</h3>
-            <p id="avtor">Автор: Kentaro Miura</p>
-        </div>
-    </div>
-
-    <div class="conteiner">
-        <div class="bookpage">
-            <img class="snimka" src="photos-categ2/kniga4-4.jpg">
-        </div>
-        <div class="text">
-            <h3 id="zaglavie">Normal People</h3>
-            <p id="avtor">Автор: Sally Ronney</p>
-        </div>
-    </div>
-</section>
-</div>
- 
         <div class="TOP-books">
+            <h2><b>Най-добрите ни предложения за тази седмица:</b></h2>
+            <section class="category">
+                <div class="conteiner">
+                    <div class="bookpage">
+                        <img class="snimka" src="photos-categ1/kniga1.jpg">
+                    </div>
+                    <div class="text">
+                        <h3 id="zaglavie">360 градуса преди края</h3>
+                        <p id="avtor">Автор: Силва Дончева</p>
+                    </div>
+                </div>
+
+                <div class="conteiner">
+                    <div class="bookpage">
+                        <img class="snimka" src="photos-categ2/kniga2-2.jpg">
+                    </div>
+                    <div class="text">
+                        <h3 id="zaglavie">White Nights</h3>
+                        <p id="avtor">Автор: Fyodor Dostoyevsky</p>
+                    </div>
+                </div>
+
+                <div class="conteiner">
+                    <div class="bookpage">
+                        <img class="snimka" src="photos-categ2/kniga3-3.jpg">
+                    </div>
+                    <div class="text">
+                        <h3 id="zaglavie">Berserk Deluxe</h3>
+                        <p id="avtor">Автор: Kentaro Miura</p>
+                    </div>
+                </div>
+
+                <div class="conteiner">
+                    <div class="bookpage">
+                        <img class="snimka" src="photos-categ2/kniga4-4.jpg">
+                    </div>
+                    <div class="text">
+                        <h3 id="zaglavie">Normal People</h3>
+                        <p id="avtor">Автор: Sally Ronney</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="section3">
             <h2><b>Добре дошли в нашата онлайн библиотека! 📚</b></h2>
 
-                <h2>Открийте безкраен свят от знания и вдъхновение с нашата дигитална библиотека. ткрийте безкраен свят от знания и вдъхновение с нашата дигитална библиотека. Разглеждайте и четете книги от различни жанрове – от класическа литература до най-новите бестселъри. Достъпвайте любимите си заглавия по всяко време и от всяко устройство.</h2>
-                <h2>📖 Хиляди книги на един клик разстояние</h2>
-                <h2>🔍 Лесно търсене и персонализирани препоръки</h2>
-                <h2>📱 Достъп отвсякъде – на компютър, таблет или телефон</h2>
+            <h2>Открийте безкраен свят от знания и вдъхновение с нашата дигитална библиотека. ткрийте безкраен свят от
+                знания и вдъхновение с нашата дигитална библиотека. Разглеждайте и четете книги от различни жанрове – от
+                класическа литература до най-новите бестселъри. Достъпвайте любимите си заглавия по всяко време и от
+                всяко устройство.</h2>
+            <h2>📖 Хиляди книги на един клик разстояние</h2>
+            <h2>🔍 Лесно търсене и персонализирани препоръки</h2>
+            <h2>📱 Достъп отвсякъде – на компютър, таблет или телефон</h2>
 
 
         </div>
-</div>
+    </div>
 
-   
+
     <footer>
         <h1 id="name" title="ReadHub">ReadHub</h1>
 
