categs-design_and_photos

--- a/Preparation_2/categ2.html
+++ b/Preparation_2/categ2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English books</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="categ2.css">
+    <link rel="stylesheet" href="categ1.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -43,7 +43,7 @@
     <section class="category">
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka" src="photos-categ2/kniga1-1.jpg">
+                <img class="snimka" src="photos-categ2/kniga1.png">
             </div>
             <div class="text">
                 <h3 id="zaglavie">Onyx Storm</h3>
@@ -55,7 +55,7 @@
             <div class="bookpage">
                 <img class="snimka2" src="photos-categ2/kniga2-2.jpg">
             </div>
-            <div class="text1">
+            <div class="text">
                 <h3 id="zaglavie2">White Nights</h3>
                 <p id="avtor">Автор: Fyodor Dostoyevsky</p>
             </div>        
@@ -65,7 +65,7 @@
             <div class="bookpage">
                 <img class="snimka3" src="photos-categ2/kniga3-3.jpg" width="20%" height="10%">
             </div>
-            <div class="text2">
+            <div class="text">
                 <h3 id="zaglavie3">Berserk Deluxe</h3>
                 <p id="avtor">Автор: Kentaro Miura</p>
             </div>       
@@ -75,7 +75,7 @@
             <div class="bookpage">
                 <img class="snimka4" src="photos-categ2/kniga4-4.jpg">
             </div>
-            <div class="text3">
+            <div class="text">
                 <h3 id="zaglavie4">Normal People</h3>
                 <p id="avtor">Автор: Sally Ronney</p>
             </div>      
