--- a/Preparation_2/categ3.html
+++ b/Preparation_2/categ3.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0">
     <title>Bestselers</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="categ1.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -37,6 +38,53 @@
         </a>
 
     </header>
+
+
+    <h1 class="bel"> Best Selers </h1>
+
+    <section class="category">
+        <div class="conteiner">
+            <div class="bookpage">
+                <img class="snimka" src="photos-categ3/kniga1.png" >
+            </div>
+            <div class="text">
+                <h3 id="zaglavie">Хрътката срещу хрътката</h3>
+                <p id="avtor">Автор: Владимир Зарев</p>
+            </div>        
+        </div>
+
+        <div class="conteiner2">
+            <div class="bookpage">
+                <img class="snimka2" src="photos-categ3/kniga2.png">
+            </div>
+            <div class="text">
+                <h3 id="zaglavie2">Последна молитва</h3>
+                <p id="avtor">Автор: Боян Боев</p>
+            </div>        
+        </div>
+
+        <div class="conteiner3">
+            <div class="bookpage">
+                <img class="snimka3" src="photos-categ3/kniga3.png" width="20%" height="10%">
+            </div>
+            <div class="text">
+                <h3 id="zaglavie3">Дарена</h3>
+                <p id="avtor3">Автор: Ина Ясипова</p>
+            </div>       
+        </div>
+
+        <div class="conteiner4">
+            <div class="bookpage">
+                <img class="snimka4" src="photos-categ3/kniga4.png">
+            </div>
+            <div class="text">
+                <h3 id="zaglavie4">Високо</h3>
+                <p id="avtor">Автор: Владимир Николов</p>
+            </div>      
+        </div>
+
+    </section>
+
 </body>
 
 </html>
