--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -56,7 +56,7 @@
             <div class="bookpage">
                 <img class="snimka2" src="photos-categ1/kniga3.jpg">
             </div>
-            <div class="text1">
+            <div class="text">
                 <h3 id="zaglavie2">Аз и морето</h3>
                 <p id="avtor">Автор: Петя Добарова</p>
             </div>        
@@ -66,7 +66,7 @@
             <div class="bookpage">
                 <img class="snimka3" src="photos-categ1/kniga2.jpg" width="20%" height="10%">
             </div>
-            <div class="text2">
+            <div class="text">
                 <h3 id="zaglavie3">Между Роднини</h3>
                 <p id="avtor3">Автор: Стана Апостолова</p>
             </div>       
@@ -76,7 +76,7 @@
             <div class="bookpage">
                 <img class="snimka4" src="photos-categ1/kniga4.jpg">
             </div>
-            <div class="text3">
+            <div class="text">
                 <h3 id="zaglavie4">Една Учителка</h3>
                 <p id="avtor">Автор: Иван Драганов</p>
             </div>      
