Fixed TOP Books section problem with image scaling

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -96,9 +96,10 @@
         </div>
 
         <div class="TOP-books">
-            <h2><b>Най-добрите ни предложения за тази седмица:</b></h2>
+            <h1><b><u>Най-добрите ни предложения за тази седмица:</u></b></h1>
             <section class="category">
-                <div class="conteiner">
+
+                <a href="kniga1.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ1/kniga1.jpg">
                     </div>
@@ -106,9 +107,9 @@
                         <h3 id="zaglavie">360 градуса преди края</h3>
                         <p id="avtor">Автор: Силва Дончева</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="conteiner">
+                <a href="kniga2-2.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ2/kniga2-2.jpg">
                     </div>
@@ -116,9 +117,9 @@
                         <h3 id="zaglavie">White Nights</h3>
                         <p id="avtor">Автор: Fyodor Dostoyevsky</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="conteiner">
+                <a href="kniga3-3.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ2/kniga3-3.jpg">
                     </div>
@@ -126,9 +127,9 @@
                         <h3 id="zaglavie">Berserk Deluxe</h3>
                         <p id="avtor">Автор: Kentaro Miura</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="conteiner">
+                <a href="kniga4-4.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ2/kniga4-4.jpg">
                     </div>
@@ -136,7 +137,8 @@
                         <h3 id="zaglavie">Normal People</h3>
                         <p id="avtor">Автор: Sally Ronney</p>
                     </div>
-                </div>
+                </a>
+
             </section>
         </div>
 
