--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -69,21 +69,28 @@
 
                 <div class="slide" id="s2">
                     <a href="book1.html" class="car_link">
-                        <img class="car_picture" title="book1 (again)" src="photos-categ1/kniga2.jpg">
+                        <img class="car_picture" title="Между чука и наковалнята" src="photos-categ1/kniga2.jpg">
                     </a>
                     <div class="bookinfo">
-                        <h1>Book 2</h1>
-                        <p>Some book description here.</p>
+                        <h1>Между Чудовища</h1>
+                        <p>Тази книга ще ви научи на тайното изкуство на продуктивното нищоправене! Със специални
+                            техники като „Ще го направя утре“ и „Ако не го започнеш, няма как да го сбъркаш“, това
+                            четиво ще ви помогне да усъвършенствате прокрастинацията до ниво майстор. Перфектен подарък
+                            за всеки, който има дълъг списък със задачи… и никакво намерение да ги изпълни.</p>
                     </div>
                 </div>
 
                 <div class="slide" id="s3">
                     <a href="book1.html" class="car_link">
-                        <img class="car_picture" title="book 1.5" src="photos-categ1/kniga3.jpg">
+                        <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
+                            src="photos-categ1/kniga3.jpg">
                     </a>
                     <div class="bookinfo">
-                        <h1>Book 1.5</h1>
-                        <p>Another book description.</p>
+                        <h1>Некъв учебник по бългаски</h1>
+                        <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
+                            „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
+                            изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
+                            пред телевизора в 2 през нощта.</p>
                     </div>
                 </div>
 
@@ -152,8 +159,6 @@
             <h2>📖 Хиляди книги на един клик разстояние</h2>
             <h2>🔍 Лесно търсене и персонализирани препоръки</h2>
             <h2>📱 Достъп отвсякъде – на компютър, таблет или телефон</h2>
-
-
         </div>
     </div>
 
