--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -31,7 +31,7 @@
             <div class="dropdown-content">
                 <a href="categ1.html"><b>Bulgarian books</b></a>
                 <a href="categ2.html"><b>Foreign books</b></a>
-                <a href="categ3.html"><b>Bestselers</b></a>
+                <a href="categ3.html"><b>Bestsellers</b></a>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
         </div>
 
         <div class="TOP-books">
-            <h2><b>Най-добрите ни предложения за тази седмица:</b></h2>
+            <h1><b>Най-добрите ни предложения за тази седмица:</b></h1>
             <section class="category">
                 <div class="conteiner">
                     <div class="bookpage">
@@ -157,11 +157,25 @@
 
 
     <footer>
-        <h1 id="name" title="ReadHub">ReadHub</h1>
+        <div id="navi">
+            <h3><a href="index.html" id="footer_button" title="Back to home.">ReadHub</a></h3>
 
-        <p id="FormalityMessage">Copyright © 2025, All Rights Reserved</p>
-        <a class="footerlink" href="login.html">Login</a>
-        <a class="footerlink" href="signup.html">Sign Up</a>
+            <h3><a href="categ1.html" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
+
+            <h3><a href="categ2.html" id="footer_button" title="Try something new,">English books</a></h3>
+
+            <h3><a href="categ3.html" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
+        </div>
+        <div id="info">
+            <p id="FormalityMessage">Copyright © 2025, All Rights Reserved</p>
+            <p>tel: +359 123 456 789 </p>
+            <p>email: ReadHub@gmail.com</p>
+            <p>Legends enterprises<sup>®</sup></p>
+            <div id="info2">
+                <a class="footerlink" href="login.html">Login&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="signup.html">Sign Up</a>
+            </div>
+        </div>
     </footer>
 </body>
 
