--- a/Preparation_2/categ3.html
+++ b/Preparation_2/categ3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0">
-    <title>Bestselers</title>
+    <title>Bestsellers</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
