--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -103,11 +103,8 @@
         </div>
 
         <div class="TOP-books">
-<<<<<<< HEAD
             <h1><b>Най-добрите ни предложения за тази седмица:</b></h1>
-=======
-            <h1><b><u>Най-добрите ни предложения за тази седмица:</u></b></h1>
->>>>>>> a7336a9deca6fcc6efe7cefbacfe72fd103381bb
+
             <section class="category">
 
                 <a href="kniga1.html" class="conteiner">
@@ -183,9 +180,15 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="login.html">Login&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="signup.html">Sign Up</a>
+                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
             </div>
+        </div>
+        <div id="info3">
+            <p> <b>-Спонсори-</b></p>
+            <P>🔹Алфа 🏫 – ELSYS | Технологии и иновации.</P>
+            <P>🔹Бета 🎓 – Dc-Dr Dimcho Dimov | Бъдещи лидери.</P>
+            <P>🔹Гама 📚 – Sp-DA | Образование и развитие.</P>
         </div>
     </footer>
 </body>
