started second carousel !!!very broken!!!

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -149,6 +149,87 @@
             </section>
         </div>
 
+        <div class="carousel-container-2">
+            <div class="carousel-2">
+
+                <button class="car_button-2" id="prev-2" onclick="nextslide(-1)">&#10094;</button>
+                <button class="car_button-2" id="next-2" onclick="nextslide(1)">&#10095;</button>
+
+                <div class="slide-2" id="s1-2">
+
+                    <a href="book1.html" class="spammable-book">
+                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                    </a>
+
+                    <a href="book1.html" class="spammable-book">
+                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                    </a>
+
+                    <a href="book1.html" class="spammable-book">
+                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                    </a>
+
+                    <a href="book1.html" class="spammable-book">
+                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                    </a>
+
+                    <a href="book1.html" class="spammable-book">
+                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                    </a>
+
+                    <a href="book1.html" class="spammable-book">
+                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                    </a>
+
+
+                    <div class="slide-2" id="s2-2">
+                        <a href="book1.html" class="car_link-2">
+                            <img class="car_picture-2" title="Между чука и наковалнята" src="photos-categ1/kniga2.jpg">
+                        </a>
+                        <div class="bookinfo-2">
+                            <h1>Между Чудовища</h1>
+                            <p>Тази книга ще ви научи на тайното изкуство на продуктивното нищоправене! Със специални
+                                техники като „Ще го направя утре“ и „Ако не го започнеш, няма как да го сбъркаш“, това
+                                четиво ще ви помогне да усъвършенствате прокрастинацията до ниво майстор. Перфектен
+                                подарък
+                                за всеки, който има дълъг списък със задачи… и никакво намерение да ги изпълни.</p>
+                        </div>
+                    </div>
+
+                    <div class="slide-2" id="s3-2">
+                        <a href="book1.html" class="car_link-2">
+                            <img class="car_picture-2"
+                                title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
+                                src="photos-categ1/kniga3.jpg">
+                        </a>
+                        <div class="bookinfo-2">
+                            <h1>Некъв учебник по бългаски</h1>
+                            <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас!
+                                От
+                                „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и
+                                не
+                                изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато
+                                ядете
+                                пред телевизора в 2 през нощта.</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="box-navbutt-2">
+                    <button class="navbutt-2" onclick="ButtSlide(0)">&nbsp</button>
+                    <button class="navbutt-2" onclick="ButtSlide(1)">&nbsp</button>
+                    <button class="navbutt-2" onclick="ButtSlide(2)">&nbsp</button>
+                </div>
+            </div>
+        </div>
+
         <div class="section3">
             <h2><b>Добре дошли в нашата онлайн библиотека! 📚</b></h2>
 
