footers categ123 fix

--- a/Preparation_2/categ2.html
+++ b/Preparation_2/categ2.html
@@ -82,6 +82,34 @@
         </div>
 
     </section>
+
+    <footer>
+        <div id="navi">
+            <h3><a href="index.html" id="footer_button" title="Back to home.">ReadHub</a></h3>
+
+            <h3><a href="categ1.html" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
+
+            <h3><a href="categ2.html" id="footer_button" title="Try something new,">English books</a></h3>
+
+            <h3><a href="categ3.html" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
+        </div>
+        <div id="info">
+            <p id="FormalityMessage">Copyright © 2025, All Rights Reserved</p>
+            <p>tel: +359 123 456 789 </p>
+            <p>email: ReadHub@gmail.com</p>
+            <p>Legends enterprises<sup>®</sup></p>
+            <div id="info2">
+                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
+            </div>
+        </div>
+        <div id="info3">
+            <p> <b>-Спонсори-</b></p>
+            <P>🔹Алфа 🏫 – ELSYS | Технологии и иновации.</P>
+            <P>🔹Бета 🎓 – Dc-Dr Dimcho Dimov | Бъдещи лидери.</P>
+            <P>🔹Гама 📚 – Sp-DA | Образование и развитие.</P>
+        </div>
+    </footer>
 </body>
 
 </html>
