--- a/Preparation_2/categ2.html
+++ b/Preparation_2/categ2.html
@@ -51,7 +51,7 @@
             </div>        
         </div>
 
-        <div class="conteiner2">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka2" src="photos-categ2/kniga2-2.jpg">
             </div>
@@ -61,7 +61,7 @@
             </div>        
         </div>
 
-        <div class="conteiner3">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka3" src="photos-categ2/kniga3-3.jpg" width="20%" height="10%">
             </div>
@@ -71,7 +71,7 @@
             </div>       
         </div>
 
-        <div class="conteiner4">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka4" src="photos-categ2/kniga4-4.jpg">
             </div>
