--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -52,7 +52,7 @@
             </div>        
         </div>
 
-        <div class="conteiner2">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka2" src="photos-categ1/kniga3.jpg">
             </div>
@@ -62,7 +62,7 @@
             </div>        
         </div>
 
-        <div class="conteiner3">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka3" src="photos-categ1/kniga2.jpg" width="20%" height="10%">
             </div>
@@ -72,7 +72,7 @@
             </div>       
         </div>
 
-        <div class="conteiner4">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka4" src="photos-categ1/kniga4.jpg">
             </div>
