--- a/Preparation_2/categ3.html
+++ b/Preparation_2/categ3.html
@@ -53,7 +53,7 @@
             </div>        
         </div>
 
-        <div class="conteiner2">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka2" src="photos-categ3/kniga2.png">
             </div>
@@ -63,7 +63,7 @@
             </div>        
         </div>
 
-        <div class="conteiner3">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka3" src="photos-categ3/kniga3.png" width="20%" height="10%">
             </div>
@@ -73,7 +73,7 @@
             </div>       
         </div>
 
-        <div class="conteiner4">
+        <div class="conteiner">
             <div class="bookpage">
                 <img class="snimka4" src="photos-categ3/kniga4.png">
             </div>
